changed div class="Intro" to div id="Intro"

--- a/CSS Files/Styles.css
+++ b/CSS Files/Styles.css
@@ -1,6 +1,14 @@
+/*element selector styles*/
+
 img
 {
     width: 150px;
     height: 200px;
     text-align: center;
+}
+
+/*id selector styles*/
+#Intro
+{
+    /*text-align: center;*/
 }
