Added a new div that contains my professional links. Also added CSS for the links div.

--- a/CSS Files/Styles.css
+++ b/CSS Files/Styles.css
@@ -7,8 +7,32 @@ img
     text-align: center;
 }
 
+hr 
+{
+    display: block;
+    unicode-bidi: isolate;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+
+    margin-left: 0px;
+    margin-right: auto;
+}
+
 /*id selector styles*/
+
 #Intro
 {
     /*text-align: center;*/
+}
+
+/*class selector styles*/
+
+.center
+{
+    
 }
