Added CV.html, made some changes in Home.html, added styles for p and #Intro

--- a/CSS Files/Styles.css
+++ b/CSS Files/Styles.css
@@ -23,11 +23,19 @@ hr
     margin-right: auto;
 }
 
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 /*id selector styles*/
 
 #Intro
 {
-    /*text-align: center;*/
+    text-align: center;
 }
 
 /*class selector styles*/
