--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,20 @@
 
 a
 { 
-    color:mediumblue;
+    text-decoration: none;
+}
+
+footer
+{
+    text-align: center;
+    /* position:fixed; */
+    /* left:0px; */
+    height: 100px;
+    position: absolute;
+    bottom: 5;
+    width: 100%;
+    /*height: 60px;
+    line-height: 60px;*/
 }
 
 img
@@ -12,21 +25,6 @@ img
     text-align: center;
 }
 
-/*hr 
-{
-    display: block;
-    unicode-bidi: isolate;
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    overflow: hidden;
-    border-style: inset;
-    border-width: 1px;
-    margin-left: 0px;
-    margin-right: auto;
-}*/
-
 p 
 {
     /*font-family: Arial, Helvetica, sans-serif;*/
@@ -35,7 +33,7 @@ p
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    color:black;
+    color: black;
 }
 
 /*id selector styles*/
@@ -45,31 +43,29 @@ p
     text-align: center;    
 }
 
-/* #homeintro
-{
-    text-align: center;
-}
-
-#messageintro
-{
-    text-align: center;
-}
-
-#aboutintro
-{
-    text-align: center;
-} */
-
 #menuitem0
 {
     margin-left: 5;
+    font-size: 24px;
+}
+
+#contacttable
+{
+    margin-left: auto; 
+    margin-right: auto;
+}
+
+#messagetd
+{
+    
 }
 
 /*class selector styles*/
 
 .textlink
 {
-    text-decoration:underline;
+    text-decoration: underline;
+    color: mediumblue;
 }
 
 .errortext
@@ -86,39 +82,36 @@ p
 {
     overflow: hidden;
     top: 0;
-    background-color: white;
+    /*background-color: white;*/
+    background-color: black;
     width: 100%;
+    
 }
 
 .menuitem
 {
     font-size: 20px;
+    color: white;
 }
 
 .docked
 {
-    position:fixed;
+    position: fixed;
 }
 
 .hidden 
 {
-    display:none;
+    display: none;
 }
 
 .customfooter 
 {
     /* position:fixed; */
     /* left:0px; */
-    height:100px;
+    height: 100px;
     /* position: absolute; */
     bottom: 5;
     width: 100%;
     /*height: 60px;
     line-height: 60px;*/
 }
-
-/*.vl 
-{
-    border-left: 1px solid black;
-    height: 10px;
-}*/
