--- a/css/styles.css
+++ b/css/styles.css
@@ -25,23 +25,23 @@ img
     text-align: center;
 }
 
-p 
+body 
 {
-    /*font-family: Arial, Helvetica, sans-serif;*/
-    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    /* display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    color: black;
+    color: black; */
 }
 
 /*id selector styles*/
 
-#educationdiv
+/* #educationdiv
 {
     text-align: center;    
-}
+} */
 
 #menuitem0
 {
@@ -82,8 +82,8 @@ p
 {
     overflow: hidden;
     top: 0;
-    /*background-color: white;*/
-    background-color: black;
+    background-color: white;
+    /* background-color: mediumblue; */
     width: 100%;
     
 }
@@ -91,7 +91,7 @@ p
 .menuitem
 {
     font-size: 20px;
-    color: white;
+    /* color: white; */
 }
 
 .docked
